<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_demo_driver</name>
  <version>0.0.1</version>
  <description>TODO: Demo driver(s) for ros2 control</description>
  <maintainer email="dmitri.ignakov@taigarobotics.com">dmitri</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>hardware_interface</buildtool_depend>
  <buildtool_depend>pluginlib</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>

  <depend>ros2_control_demo_hardware</depend>
  <!--<test_depend>ament_lint_auto</test_depend>-->
  <!--<test_depend>ament_lint_common</test_depend>-->
  <!--<test_depend>ament_cmake_gtest</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
